Revamp of projects sections completed

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           class="d-flex flex-column justify-content-center align-items-center"
         >
           <!--  -->
-          <!-- Bytesized Book Reviews -->
+          <!-- Bytesized Book Reviews WIDESCREEN -->
           <!--  -->
           <div
             class="col-10 d-flex justify-content-center align-items-center p-0"
@@ -259,7 +259,7 @@
             </div>
           </div>
           <!--  -->
-          <!-- Stock Trader -->
+          <!-- Stock Trader WIDESCREEN -->
           <!--  -->
           <div
             class="col-10 d-flex justify-content-center align-items-center p-0"
@@ -319,7 +319,7 @@
             </div>
           </div>
           <!--  -->
-          <!-- Shopping List -->
+          <!-- Shopping List WIDESCREEN -->
           <!--  -->
           <div
             class="col-10 d-flex justify-content-center align-items-center p-0"
@@ -368,7 +368,7 @@
                           class="col-4 btn link-visit-wide rounded-5 mt-3 ms-2"
                           href="https://jazzorpheus.github.io/shopping-list/"
                           target="_blank"
-                          >Try App</a
+                          >Try out app</a
                         >
                       </div>
                     </div>
@@ -378,7 +378,7 @@
             </div>
           </div>
           <!--  -->
-          <!-- Photography Website -->
+          <!-- Photography Website WIDESCREEN -->
           <!--  -->
           <div
             class="col-10 d-flex justify-content-center align-items-center p-0"
@@ -436,7 +436,7 @@
             </div>
           </div>
           <!--  -->
-          <!-- Spellchecker -->
+          <!-- Spellchecker WIDESCREEN -->
           <!--  -->
           <div
             class="col-10 d-flex justify-content-center align-items-center p-0"
@@ -494,18 +494,18 @@
         <!-- **********************************************************************************************************************************   NARROWSCREEN -->
 
         <!--  -->
-        <!-- Bytesized Book Reviews -->
+        <!-- Bytesized Book Reviews NARROWSCREEN -->
         <!--  -->
-        <div class="container-fluid projects-small-device">
+        <div class="container-fluid projects-small-device my-5">
           <div class="row d-flex justify-content-center align-items-center">
             <div
-              class="col-12 col-md-6 d-flex justify-content-center p-0 phone-narrow"
+              class="col-10 col-sm-8 col-md-6 d-flex justify-content-center p-0 phone-narrow"
             >
               <img src="images/bytesized-mobile-alt.png" alt="" />
             </div>
 
             <div
-              class="col-10 col-sm-8 col-md-4 d-flex flex-wrap justify-content-center align-items-center p-0 m-0 project-description"
+              class="col-10 col-sm-8 col-md-6 d-flex flex-wrap justify-content-center align-items-center p-md-5 p-0 m-0 project-description"
             >
               <h2 class="text-center mb-4 p-0">Bytesized Book Reviews</h2>
               <p class="text-center">
@@ -517,202 +517,152 @@
               </p>
               <div class="row d-flex flex-nowrap mt-2 mb-4 links">
                 <a
-                  class="col-5 btn link-visit-narrow rounded-5 me-2"
-                  href="https://bytesized-book-reviews-f7646a733018.herokuapp.com/"
-                  target="_blank"
-                  >Visit Website</a
-                >
-                <a
-                  class="col-5 btn link-code-narrow rounded-5 ms-2"
+                  class="col-5 btn link-code-narrow rounded-5 me-2"
                   href="https://github.com/jazzorpheus/bytesized-reviews"
                   target="_blank"
                   >Source Code</a
                 >
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="spacers d-xl-none m-5">
-          <hr />
-          <hr />
-          <hr />
-        </div>
-        <!--  -->
-        <!-- Shopping List -->
-        <!--  -->
-        <div class="container-fluid projects-small-device mt-5">
-          <div class="row d-flex justify-content-evenly align-items-center">
-            <div
-              class="col-10 col-md-4 order-md-2 d-flex justify-content-center p-0 phone-narrow"
-            >
-              <img src="images/shopping-list-mobile.png" alt="" />
-            </div>
-
-            <div
-              class="row col-10 col-md-4 d-flex flex-wrap justify-content-center align-items-center p-0 project-description"
-            >
-              <h2
-                class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
-              >
-                React Shopping List
-              </h2>
-              <p class="col-12 d-flex m-0 p-0 text-center">
-                (Under development) <br />
-                A shopping/groceries list web app made with React and Material
-                UI that allows the user to create, check off, and delete
-                shopping list items grouped by category. The user can optionally
-                input product prices and quantites which the app keeps track of
-                and renders total costs.
-              </p>
-              <div
-                class="row justify-content-center align-items-end mt-2 mb-5 links"
-              >
                 <a
-                  class="col-4 btn link-visit rounded-5"
-                  href="https://jazzorpheus.github.io/shopping-list/"
+                  class="col-5 btn link-visit-narrow rounded-5 ms-2"
+                  href="https://bytesized-book-reviews-f7646a733018.herokuapp.com/"
                   target="_blank"
                   >Visit Website</a
                 >
-                <a
-                  class="col-4 btn link-code rounded-5"
-                  href="https://github.com/jazzorpheus/shopping-list"
-                  target="_blank"
-                  >Source Code</a
-                >
               </div>
             </div>
           </div>
         </div>
-
-        <div class="spacers d-xl-none m-5">
-          <hr />
-          <hr />
-          <hr />
-        </div>
-
-        <div class="container-fluid projects-small-device mb-5">
-          <!--  -->
-          <!-- Photography Website -->
-          <!--  -->
-          <div class="row d-flex justify-content-evenly align-items-center">
+        <!--  -->
+        <!-- Stock Trader NARROWSCREEN -->
+        <!--  -->
+        <div class="container-fluid projects-small-device my-5">
+          <div class="row d-flex justify-content-center align-items-center">
             <div
-              class="col-10 col-md-4 d-flex justify-content-center p-0 phone-narrow"
-            >
-              <img src="images/photography-mobile.png" alt="" />
-            </div>
-
-            <div
-              class="row col-10 col-md-4 d-flex flex-wrap justify-content-center align-items-center p-0 project-description"
-            >
-              <h2
-                class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
-              >
-                Photography Website
-              </h2>
-              <p class="col-12 d-flex m-0 p-0 text-center">
-                A static personal photography website made with HTML, CSS, and
-                Bootstrap to demonstrate the potential of Bootstrap's grid
-                system in creating highly responsive pages.
-              </p>
-              <div
-                class="row justify-content-center align-items-end mt-2 mb-5 links"
-              >
-                <a
-                  class="col-4 btn link-visit rounded-5"
-                  href="https://jazzorpheus.github.io/photography/home.html"
-                  target="_blank"
-                  >Visit Website</a
-                >
-                <a
-                  class="col-4 btn link-code rounded-5"
-                  href="https://github.com/jazzorpheus/photography"
-                  target="_blank"
-                  >Source Code</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="spacers d-xl-none m-5">
-          <hr />
-          <hr />
-          <hr />
-        </div>
-
-        <div class="container-fluid projects-small-device mb-5">
-          <!--  -->
-          <!-- Stock Trader -->
-          <!--  -->
-          <div class="row d-flex justify-content-evenly align-items-center">
-            <div
-              class="col-10 col-md-4 order-md-2 d-flex justify-content-center p-0 phone-narrow"
+              class="col-10 col-sm-8 col-md-6 d-flex justify-content-center p-0 order-md-1 phone-narrow"
             >
               <img src="images/finance-mobile.png" alt="" />
             </div>
 
             <div
-              class="row col-10 col-md-4 d-flex flex-wrap justify-content-center align-items-center p-0 project-description"
+              class="col-10 col-sm-8 col-md-6 d-flex flex-wrap justify-content-center align-items-center ps-md-5 p-0 m-0 order-md-0 project-description"
             >
-              <h2
-                class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
-              >
-                Stock Trader App
-              </h2>
-              <p class="col-12 d-flex m-0 p-0 text-center">
+              <h2 class="text-center mb-4 p-0">Stock Trader App</h2>
+              <p class="text-center">
                 A web app created with the Flask framework together with a SQL
                 database where users can 'purchase' and 'sell' stocks based on
                 real-time data pulled from the IEX Exchange via the IEX Cloud
                 API. This project was part of an assignment for HarvardX's CS50
                 course. See markdown on GitHub for more details.
               </p>
-              <div
-                class="row justify-content-center align-items-end mt-2 mb-5 links"
-              >
+              <div class="row d-flex flex-nowrap mt-2 mb-4 links">
                 <a
-                  class="col-4 btn link-visit rounded-5"
-                  href="https://youtu.be/uEFdlHU87Ik"
-                  target="_blank"
-                  >Video Demo</a
-                >
-                <a
-                  class="col-4 btn link-code rounded-5"
+                  class="col-5 btn link-code-narrow rounded-5 me-2"
                   href="https://github.com/jazzorpheus/mock-trader"
                   target="_blank"
                   >Source Code</a
+                >
+                <a
+                  class="col-5 btn link-visit-narrow rounded-5 ms-2"
+                  href="https://youtu.be/uEFdlHU87Ik"
+                  target="_blank"
+                  >Video Demo</a
                 >
               </div>
             </div>
           </div>
         </div>
-
-        <div class="spacers d-xl-none m-5">
-          <hr />
-          <hr />
-          <hr />
-        </div>
-
-        <div class="container-fluid projects-small-device mb-5">
-          <!--  -->
-          <!-- Spellchecker -->
-          <!--  -->
-          <div class="row d-flex justify-content-evenly align-items-center">
+        <!--  -->
+        <!-- Shopping List NARROWSCREEN -->
+        <!--  -->
+        <div class="container-fluid projects-small-device my-5">
+          <div class="row d-flex justify-content-center align-items-center">
             <div
-              class="col-10 col-md-4 d-flex justify-content-center p-0 phone-narrow"
+              class="col-10 col-sm-8 col-md-6 d-flex justify-content-center p-0 phone-narrow"
+            >
+              <img src="images/shopping-list-mobile.png" alt="" />
+            </div>
+
+            <div
+              class="col-10 col-sm-8 col-md-6 d-flex flex-wrap justify-content-center align-items-center p-md-5 p-0 m-0 project-description"
+            >
+              <h2 class="text-center mb-4 p-0">React Shopping List</h2>
+              <p class="text-center">
+                A shopping/groceries list web app made with React and Material
+                UI that allows the user to create, check off, and delete
+                shopping list items grouped by category. The user can optionally
+                input product prices and quantites which the app keeps track of
+                and renders total costs.
+              </p>
+              <div class="row d-flex flex-nowrap mt-2 mb-4 links">
+                <a
+                  class="col-5 btn link-code-narrow rounded-5 me-2"
+                  href="https://github.com/jazzorpheus/shopping-list"
+                  target="_blank"
+                  >Source Code</a
+                >
+                <a
+                  class="col-5 btn link-visit-narrow rounded-5 ms-2"
+                  href="https://jazzorpheus.github.io/shopping-list/"
+                  target="_blank"
+                  >Try out app</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--  -->
+        <!-- Photography Website NARROWSCREEN -->
+        <!--  -->
+        <div class="container-fluid projects-small-device my-5">
+          <div class="row d-flex justify-content-center align-items-center">
+            <div
+              class="col-10 col-sm-8 col-md-6 d-flex justify-content-center p-0 order-md-1 phone-narrow"
+            >
+              <img src="images/photography-mobile.png" alt="" />
+            </div>
+
+            <div
+              class="col-10 col-sm-8 col-md-6 d-flex flex-wrap justify-content-center align-items-center ps-md-5 p-0 m-0 order-md-0 project-description"
+            >
+              <h2 class="text-center mb-4 p-0">Photography Website</h2>
+              <p class="text-center">
+                A static personal photography website made with HTML, CSS, and
+                Bootstrap to demonstrate the potential of Bootstrap's grid
+                system in creating highly responsive pages.
+              </p>
+              <div class="row d-flex flex-nowrap mt-2 mb-4 links">
+                <a
+                  class="col-5 btn link-code-narrow rounded-5 me-2"
+                  href="https://github.com/jazzorpheus/photography"
+                  target="_blank"
+                  >Source Code</a
+                >
+                <a
+                  class="col-5 btn link-visit-narrow rounded-5 ms-2"
+                  href="https://jazzorpheus.github.io/photography/home.html"
+                  target="_blank"
+                  >Visit Website</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--  -->
+        <!-- Spellchecker NARROWSCREEN -->
+        <!--  -->
+        <div class="container-fluid projects-small-device my-5">
+          <div class="row d-flex justify-content-center align-items-center">
+            <div
+              class="col-10 col-sm-8 col-md-6 d-flex justify-content-center p-0 phone-narrow"
             >
               <img src="images/CS50Speller-mobile.png" alt="" />
             </div>
 
             <div
-              class="row col-10 col-md-4 d-flex flex-wrap justify-content-center align-items-center p-0 project-description"
+              class="col-10 col-sm-8 col-md-6 d-flex flex-wrap justify-content-center align-items-center p-md-5 p-0 m-0 project-description"
             >
-              <h2
-                class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
-              >
-                Spellchecker
-              </h2>
-              <p class="col-12 d-flex m-0 p-0 text-center">
+              <h2 class="text-center mb-4 p-0">Spellchecker</h2>
+              <p class="text-center">
                 A command-line application written in C that enables users to
                 spellcheck .txt files. The output includes a list of misspelled
                 words plus stats on the time taken to execute various parts of
@@ -720,11 +670,9 @@
                 investigate the pros and cons of loading the dictionary into
                 memory using varying data structures and programming methods.
               </p>
-              <div
-                class="row justify-content-center align-items-end mt-2 mb-5 links"
-              >
+              <div class="row d-flex flex-nowrap mt-2 mb-4 links">
                 <a
-                  class="col-4 btn link-code rounded-5"
+                  class="col-5 btn link-code-narrow rounded-5 me-2 w-100"
                   href="https://github.com/jazzorpheus/speller"
                   target="_blank"
                   >Source Code</a
@@ -733,6 +681,7 @@
             </div>
           </div>
         </div>
+        
       </div>
     </main>
 
