fix see projects button on small phones

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
           software. Always open to collaborating on creative new projects with a
           <span class="emphasise-text">client-first</span> approach and a philosophy to be continually learning.
         </p>
-        <button class="btn rounded-5 link-projects">
-          <strong class="p-5 fs-4">See Projects</strong>
+        <button class="btn rounded-5 link-projects w-100">
+          <strong class="p-5 fs-4 w-100">See Projects</strong>
         </button>
       </div>
 
