--- a/index.html
+++ b/index.html
@@ -216,14 +216,13 @@
                   <div
                     class="row d-flex justify-content-center align-items-center m-5 card-body"
                   >
+                  <div
+                    class="col-4 d-flex justify-content-end mt-3 mb-5 me-5 order-1 phone-wide"
+                  >
+                    <img src="images/weather-mobile.png" alt="" />
+                  </div>
                     <div
-                      class="col-4 d-flex justify-content-center mt-3 mb-5 me-5 phone-wide"
-                    >
-                      <img src="images/weather-mobile.png" alt="" />
-                    </div>
-
-                    <div
-                      class="row col-10 col-md-4 d-flex flex-wrap justify-content-center align-items-center ms-5 p-0 project-description"
+                      class="row col-10 col-md-4 d-flex flex-wrap justify-content-center align-items-center ms-5 p-0 order-0 project-description"
                     >
                       <h2
                         class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
@@ -256,6 +255,7 @@
                         >
                       </div>
                     </div>
+                    
                   </div>
                 </div>
               </div>
@@ -561,7 +561,7 @@
         <div class="container-fluid projects-small-device my-5">
           <div class="row d-flex justify-content-center align-items-center">
             <div
-              class="col-10 col-sm-8 col-md-6 d-flex justify-content-center p-0 phone-narrow"
+              class="col-10 col-sm-8 col-md-6 d-flex justify-content-center p-0 order-md-1 phone-narrow"
             >
               <img src="images/weather-mobile.png" alt="" />
             </div>
@@ -608,7 +608,7 @@
             </div>
 
             <div
-              class="col-10 col-sm-8 col-md-6 d-flex flex-wrap justify-content-center align-items-center p-md-5 p-0 m-0 project-description"
+              class="col-10 col-sm-8 col-md-6 d-flex flex-wrap justify-content-center align-items-center ps-md-5 p-0 m-0 order-md-0 project-description"
             >
               <h2 class="text-center mb-4 p-0">Bytesized Book Reviews</h2>
               <p class="text-center">
