update about, weather, and shopping descriptions

--- a/index.html
+++ b/index.html
@@ -118,9 +118,8 @@
       <div id="heading" class="d-flex flex-column align-items-center">
         <h1 class="text-center m-0 display-5">James W. R. Portfolio</h1>
         <p class="text-center text-white m-3 fs-4 intro-text">
-          An aspiring <span class="emphasise-text">full-stack</span> developer  with a keen interest in all areas of
-          software. Always open to collaborating on creative new projects with a
-          <span class="emphasise-text">client-first</span> approach and a philosophy to be continually learning.
+          An aspiring <span class="emphasise-text">full-stack</span> developer keenly searching for new opportunites to diversify my skillset. If you're interesting in collaborating on a 
+          creative new project or simply want to learn more, please don't hesitate to contact me at redgate888@hotmail.com.
         </p>
         <button class="btn rounded-5 link-projects w-100">
           <strong class="p-5 fs-4 w-100">See Projects</strong>
@@ -158,7 +157,6 @@
               <li class="list-group-item">NodeJS</li>
               <li class="list-group-item">ExpressJS</li>
               <li class="list-group-item">Flask</li>
-              <li class="list-group-item">EJS</li>
             </ul>
           </div>
           <div
@@ -233,10 +231,10 @@
                         A front-end weather app created in React that utilizes the OpenWeatherMap,
                         Tomorrow.io, and Mapbox API's to render live weather data together with an 
                         integrated map for displaying current weather patterns such as precipitation 
-                        intensity and wind speed. Only in its early stages, the plan is to continue 
-                        improving the UI with better graphics/visualizations, and eventually 
-                        add full forecasting in the form of dashboards, plus a time slider 
-                        on the map that can extend backwards or forwards in time.
+                        intensity and wind speed. Only in its early stages, the plan is to overhaul 
+                        the UI with a plethora of dashboard charts/visualizations using Charts.js, and to eventually
+                        add forecasting to the map page with a time slider that can extend backwards or forwards
+                        in time.
                       </p>
                       <div
                         class="row justify-content-center align-items-end mt-2 mb-5 links"
@@ -415,7 +413,8 @@
                         Material UI that allows the user to create, check off,
                         and delete shopping list items grouped by category. The
                         user can optionally input product prices and quantites
-                        which the app keeps track of and renders total costs.
+                        which the app keeps tracks, automatically updating total
+                        costs using React's state system.
                       </p>
                       <div
                         class="row justify-content-center align-items-end mt-2 mb-5 links"
@@ -574,10 +573,10 @@
                 A front-end weather app created in React that utilizes the OpenWeatherMap,
                 Tomorrow.io, and Mapbox API's to render live weather data together with an 
                 integrated map for displaying current weather patterns such as precipitation 
-                intensity and wind speed. Only in its early stages, the plan is to continue 
-                improving the UI with better graphics/visualizations, and eventually 
-                add full forecasting in the form of dashboards, plus a time slider 
-                on the map that can extend backwards or forwards in time.
+                intensity and wind speed. Only in its early stages, the plan is to overhaul 
+                the UI with a plethora of dashboard charts/visualizations using Charts.js, 
+                and to eventually add forecasting to the map page with a time slider that can 
+                extend backwards or forwards in time.
               </p>
               <div class="row d-flex flex-nowrap mt-2 mb-4 links">
                 <a
@@ -690,11 +689,12 @@
             >
               <h2 class="text-center mb-4 p-0">React Shopping List</h2>
               <p class="text-center">
-                A shopping/groceries list web app made with React and Material
-                UI that allows the user to create, check off, and delete
-                shopping list items grouped by category. The user can optionally
-                input product prices and quantites which the app keeps track of
-                and renders total costs.
+                A shopping/groceries list web app made with React and
+                Material UI that allows the user to create, check off,
+                and delete shopping list items grouped by category. The
+                user can optionally input product prices and quantites
+                which the app keeps tracks, automatically updating total
+                costs using React's state system.
               </p>
               <div class="row d-flex flex-nowrap mt-2 mb-4 links">
                 <a
