--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
               <li class="list-group-item">NodeJS</li>
               <li class="list-group-item">ExpressJS</li>
               <li class="list-group-item">Flask</li>
+              <li class="list-group-item">EJS</li>
             </ul>
           </div>
           <div
