replace markdown by readme

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         A full-stack, dynamic and responsive web application
                         that allows registered users to publish their own book
                         reviews. Created principally with Node, Express,
-                        Bootstrap, and MongoDB. See markdown on GitHub for a
+                        Bootstrap, and MongoDB. See README on GitHub for a
                         video demo and full details on features.
                       </p>
                       <div
@@ -354,7 +354,7 @@
                         a SQL database where users can 'purchase' and 'sell'
                         stocks based on real-time data pulled from the IEX
                         Exchange via the IEX Cloud API. This project was part of
-                        an assignment for HarvardX's CS50 course. See markdown
+                        an assignment for HarvardX's CS50 course. See README
                         on GitHub for more details.
                       </p>
                       <div
@@ -615,7 +615,7 @@
                 A full-stack, dynamic and responsive web application that allows
                 registered users to publish their own book reviews. Created
                 principally with Node, Express, Bootstrap, and MongoDB. See
-                markdown on GitHub for a video demo and full details on
+                README on GitHub for a video demo and full details on
                 features.
               </p>
               <div class="row d-flex flex-nowrap mt-2 mb-4 links">
@@ -655,7 +655,7 @@
                 database where users can 'purchase' and 'sell' stocks based on
                 real-time data pulled from the IEX Exchange via the IEX Cloud
                 API. This project was part of an assignment for HarvardX's CS50
-                course. See markdown on GitHub for more details.
+                course. See README on GitHub for more details.
               </p>
               <div class="row d-flex flex-nowrap mt-2 mb-4 links">
                 <a
