lighten emphasise text and remove html, css, js, bootstrap imgs on small screens

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             class="brand-big col-2 d-flex align-items-center justify-content-center d-sm-flex order-0"
           >
             <img
-              class="img-brand-big img-fluid"
+              class="img-var-display img-brand-big img-fluid"
               src="images/html5.png"
               alt=""
             />
@@ -46,7 +46,7 @@
             id="col-css-big"
             class="brand-big col-2 d-flex align-items-center justify-content-center d-sm-flex order-1"
           >
-            <img class="img-brand-big img-fluid" src="images/css3.png" alt="" />
+            <img class="img-var-display img-brand-big img-fluid" src="images/css3.png" alt="" />
           </div>
 
           <div
@@ -64,7 +64,7 @@
             class="brand-big col-2 d-flex align-items-center justify-content-center d-sm-flex order-3"
           >
             <img
-              class="img-brand-big img-fluid"
+              class="img-var-display img-brand-big img-fluid"
               src="images/JavaScript.png"
               alt=""
             />
@@ -73,7 +73,7 @@
             class="brand-big col-sm-2 col-2 d-flex align-items-center justify-content-center order-4"
           >
             <img
-              class="img-brand-big img-fluid"
+              class="img-var-display img-brand-big img-fluid"
               src="images/bootstrap5.jpeg"
               alt=""
             />
@@ -118,8 +118,8 @@
       <div id="heading" class="d-flex flex-column align-items-center">
         <h1 class="text-center m-0 display-5">James W. R. Portfolio</h1>
         <p class="text-center text-white m-3 fs-4 intro-text">
-          An aspiring <span class="emphasise-text">full-stack</span> developer keenly searching for new opportunites to diversify my skillset. If you're interesting in collaborating on a 
-          creative new project or simply want to learn more, please don't hesitate to contact me at redgate888@hotmail.com.
+          An aspiring <span class="emphasise-text">full-stack</span> developer keenly searching for <span class="emphasise-text">new opportunities</span> to diversify my skillset. If you're interesting in collaborating on a 
+          <span class="emphasise-text">creative new project</span> or simply wish to learn more, please don't hesitate to contact me at <span class="emphasise-text">redgate888@hotmail.com</span>.
         </p>
         <button class="btn rounded-5 link-projects w-100">
           <strong class="p-5 fs-4 w-100">See Projects</strong>
