slightly alter weather app description

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         Weather Map <span style="font-size: 1rem;">(Early version!)</span>
                       </h2>
                       <p class="col-12 d-flex m-0 p-0 text-center">
-                        A front-end weather app created in React that utilizes the OpenWeatherMap,
+                        A browser-based, mobile-first weather app created in React that utilizes the OpenWeatherMap,
                         Tomorrow.io, and Mapbox API's to render live weather data together with an 
                         integrated map for displaying current weather patterns such as precipitation 
                         intensity and wind speed. Only in its early stages, the plan is to overhaul 
@@ -571,7 +571,7 @@
             >
               <h2 class="text-center mb-4 p-0">Weather Map <span style="font-size: 1rem;">(Early version!)</span></h2>
               <p class="text-center">
-                A front-end weather app created in React that utilizes the OpenWeatherMap,
+                A browser-based, mobile-first weather app created in React that utilizes the OpenWeatherMap,
                 Tomorrow.io, and Mapbox API's to render live weather data together with an 
                 integrated map for displaying current weather patterns such as precipitation 
                 intensity and wind speed. Only in its early stages, the plan is to overhaul 
